force-app/main/default/objects/Reference_Advisor_Select__c/Reference_Advisor_Select__c.object-meta.xml
<CustomObject>
    <description>use SF2SF connection to &quot;subscribe&quot; to these records from ePlan Services instance</description>
    <label>Reference Advisor Select</label>
    <nameField>
        <displayFormat>Reference AdvSelect-{0000}</displayFormat>
        <label>Reference Advisor Select</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Advisor Select</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>