force-app/main/default/objects/Reference_Advisor_Select__c/fields/Anticipated_Investment_Date__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Investment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Anticipated Investment Date</label>
    <type>Date</type>
</CustomField>