force-app/main/default/objects/Reference_Advisor_Select__c/fields/Paychex_Sales_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Paychex_Sales_Rep_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Paychex Sales Rep Email</label>
    <length>120</length>
    <type>Text</type>
</CustomField>