force-app/main/default/objects/Reference_Advisor_Select__c/fields/Prior_Year_5500_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year_5500_Updated_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prior Year 5500 Updated Date</label>
    <type>Date</type>
</CustomField>