force-app/main/default/objects/Reference_Advisor_Select__c/fields/Sponsor_Phone__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sponsor Phone</label>
    <length>120</length>
    <type>Text</type>
</CustomField>