force-app/main/default/objects/Reference_Advisor_Select__c/fields/WC_Reason_Rescheduled_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>WC_Reason_Rescheduled_Unresponsive__c</fullName>
    <label>WC Reason Rescheduled/Unresponsive</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor does not return calls</fullName>
            </value>
            <value>
                <fullName>Sponsor does not want WC</fullName>
            </value>
            <value>
                <fullName>Sponsor unavailable</fullName>
            </value>
            <value>
                <fullName>Sponsor wants to terminate plan</fullName>
            </value>
            <value>
                <fullName>Sponsor will contact us when ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>