force-app/main/default/objects/Reference_Advisor_Select__c/listViews/Advisor_Select_Completed.listView-meta.xml
<ListView>
    <fullName>Advisor_Select_Completed</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Case_Lookup__c</columns>
    <columns>Conversion_Status__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Paychex_Case_Nbr__c</columns>
    <columns>ePlan_Onboarding_Rcd_ID__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Current_Step__c</field>
        <operation>equals</operation>
        <value>(9 of 9) Completed</value>
    </filters>
    <label>Advisor Select Completed</label>
    <queue>HRSAdvisorSelect</queue>
</ListView>