force-app/main/default/objects/Reference_Advisor_Select__c/listViews/Advisor_Select_Conversion_Plans.listView-meta.xml
<ListView>
    <fullName>Advisor_Select_Conversion_Plans</fullName>
    <columns>NAME</columns>
    <columns>Account_Name__c</columns>
    <columns>Case_Lookup__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>Conversion_Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Paychex_Case_Nbr__c</columns>
    <columns>ePlan_Onboarding_Rcd_ID__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Plan_Type__c</field>
        <operation>contains</operation>
        <value>Conv</value>
    </filters>
    <label>Advisor Select Conversion Plans</label>
    <queue>HRSAdvisorSelect</queue>
</ListView>